# GL-Engine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/models/: Idle.fbx  Run.fbx  Spinning.fbx  Start Jumping Jacks.fbx  gem_model.fbx  jump.fbx  sprint.fbx  square-platform.fbx  walking.fbx
assets/models/tree3_usdz/: scene.usdc
assets/models/trees/: Low_Poly_Pine.usdz
assets/scenes/: game_loop_test.txt  scene_objects.txt  scene_objects2.txt  scene_objects_demo.txt  terrain_instances.txt
assets/shaders/: colorRestore.frag  colorRestore.vert  grass.frag  grass.vert  simple.frag  simple.vert  skinned.vert  terrain.frag  terrain.vert  test.frag  test.vert
docs/: index.html
engine/: CMakeLists.txt
engine/assets/shaders/: forward.frag  forward.vert  lighting.frag  postProcess.frag
engine/core/: AppConfig.h  Application.cpp  Application.h  EventCallbacks.h  Game.h  Input.cpp  Input.h  Time.h  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
engine/editor/: Editor.cpp  Editor.h  EditorObjectTools.cpp  EditorObjectTools.h
engine/physics/: PhysicsSystem.cpp  PhysicsSystem.h
engine/renderer/: Framebuffer.cpp  Framebuffer.h  FullscreenQuad.cpp  FullscreenQuad.h  RenderContext.h  Renderer.cpp  Renderer.h  UniformBuffer.cpp  UniformBuffer.h
engine/renderer/passes/: BlitPass.cpp  BlitPass.h  DeferredGeometryPass.cpp  DeferredLightingPass.cpp  ForwardRenderPass.cpp  ForwardRenderPass.h  PostProcessPass.cpp  RenderPass.h  ShadowPass.cpp  ShadowPass.h  SkyboxRenderPass.cpp  SkyboxRenderPass.h  TransparentPass.cpp  TransparentPass.h
engine/renderer/resources/: Cubemap.cpp  Cubemap.h  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/resources/: AssetManager.cpp  AssetManager.h  Handle.h  Heightmap.cpp  Heightmap.h  SkeletalAnimation.h
engine/scene/: Camera.cpp  Camera.h  Component.h  Light.cpp  Light.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Skybox.h  Transform.cpp  Transform.h
engine/scene/components/: AnimatedVelocity.cpp  AnimatedVelocity.h  Animator.cpp  Animator.h  Audio.cpp  Audio.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  CharacterController.cpp  CharacterController.h  Collider.cpp  Collider.h  Component.h  Components.h  GrassRenderer.cpp  GrassRenderer.h  HeightmapCollider.cpp  HeightmapCollider.h  Light.cpp  Light.h  MeshRenderer.h  RigidBody.cpp  RigidBody.h  SphereCollider.cpp  SphereCollider.h
game/: CMakeLists.txt  MyGame.cpp  MyGame.h  main.cpp
game/passes/: ColorRestorationPass.cpp  ColorRestorationPass.h
game/systems/: Collectable.cpp  Collectable.h  FreeCameraController.cpp  FreeCameraController.h  PlayerController.cpp  PlayerController.h
game/ui/: GameUI.cpp  GameUI.h
